Bug #17097: Partitions: failing ADD PRIMARY KEY leads to temporary rotten metadata,crash   When doing an ALTER TABLE on a table using partitioning, force the table   definition to get reloaded, since it may become invalid whenever the ALTER   TABLE fails (even for an ALTER TABLE without specific partitioning changes).